--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -14,8 +14,9 @@ lyon = { workspace = true}
 wgpu-canvas = { workspace = true}
 indexmap = "2.12.0"
 usvg = "0.41.0"
-geo-types = { workspace = true }
+geo-types = { workspace = true, features = ["rstar_0_12"] }
 tokio = { workspace = true }
+rstar = "0.12.2"
 
 [build-dependencies]
 anyhow = "1.0"
