--- a/map/Cargo.toml
+++ b/map/Cargo.toml
@@ -17,6 +17,7 @@ geo-types = { workspace = true }
 log = { workspace = true }
 geo = "0.31.0"
 rand = "0.9.2"
+seahash = "4.1.0"
 
 
 [build-dependencies]
