--- a/old-tiles-gen/Cargo.toml
+++ b/old-tiles-gen/Cargo.toml
@@ -14,3 +14,4 @@ reqwest = { version = "0.12.24", features = ["blocking"] }
 thiserror =  { workspace = true }
 error-stack = { workspace = true }
 openssl = { version = "0.10", features = ["vendored"] }
+log = "0.4.28"
