--- a/AndroidDemoApp/app/src/main/AndroidManifest.xml
+++ b/AndroidDemoApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
 >
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyApplication">
             <intent-filter>
