--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -18,6 +18,7 @@ geo-types = { workspace = true, features = ["rstar_0_12"] }
 tokio = { workspace = true }
 rstar = "0.12.2"
 rustybuzz = "0.20.1"
+rustc-hash = "1.1.0"
 
 [build-dependencies]
 anyhow = "1.0"
