--- a/AndroidDemoApp/app/src/main/AndroidManifest.xml
+++ b/AndroidDemoApp/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+
             android:theme="@style/Theme.MyApplication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
