--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { workspace = true }
 rstar = "0.12.2"
 rustybuzz = "0.20.1"
 rustc-hash = "1.1.0"
+linked-hash-map = "0.5.6"
 
 [build-dependencies]
 anyhow = "1.0"
