--- a/map/Cargo.toml
+++ b/map/Cargo.toml
@@ -20,7 +20,7 @@ seahash = "4.1.0"
 rayon = "1.11.0"
 kml = "0.12.0"
 rand = "0.9.2"
-valhalla-client = { git = "https://github.com/ShashlikMap/valhalla-client-rs" }
+valhalla-client = "0.5.0"
 
 
 [build-dependencies]
