--- a/kmp/gradle/libs.versions.toml
+++ b/kmp/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ junit = "4.13.2"
 kotlin = "2.2.21"
 gobley = "0.3.7"
 composeBom = "2025.11.01"
+accompanist = "0.37.3"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -30,6 +31,7 @@ androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", versi
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+accompanist = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
