--- a/map/Cargo.toml
+++ b/map/Cargo.toml
@@ -18,7 +18,7 @@ log = { workspace = true }
 geo = "0.31.0"
 seahash = "4.1.0"
 rayon = "1.11.0"
-kml = "0.12.0"
+kml = { git = "https://github.com/ShashlikMap/kml" }
 rand = "0.9.2"
 valhalla-client = "0.5.0"
 
